tenants/tenant-a-prod/routing.yaml
# 1. POKE A HOLE IN THE FIREWALL
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-public-web
  namespace: tenant-a-prod
spec:
  selector:
    matchLabels:
      app: web
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET"]
---
# 2. OPEN THE EDGE PORT
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: public-gateway
  namespace: tenant-a-prod
spec:
  selector:
    # This selects the Ingress deployment we created in Phase 4
    app: istio-ingress 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
# 3. ROUTE THE TRAFFIC
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-route
  namespace: tenant-a-prod
spec:
  hosts:
  - "*"
  gateways:
  - public-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: web-server.tenant-a-prod.svc.cluster.local
        port:
          number: 80
